Upgrade SO to Java_17
-Removal of aff and logging-filter-base dependencies.

Issue-ID: SO-4125
Change-ID: I53f07f900a814b888f92f8d89909b0666d0b8688
Signed-off-by: Sreeja Gattagouni <SG00744975@techmahindra.com>