@@ -79,7 +79,9 @@ public class ActivateVnfDBHelperTest extends BaseTest {
         expectedServiceModelStatus.setServiceModelVersionDistrStatus(statusOk);
         expectedServiceModelStatus.setRecoveryAction(recoveryActionRetry);
         expectedServiceModelStatus.setRetryCount(new Integer(retryCountThree));
-        expectedServiceModelStatus.setWorkloadContext(workloadContext1);
+        // expectedServiceModelStatus.setRetryCount(new Integer(retryCountThree));
+        Integer integer = Integer.valueOf(retryCountThree);
+        expectedServiceModelStatus.setRetryCount(integer);
         expectedServiceModelStatus.setVnfOperationalEnvId(vnfOperationalEnvironmentId);
     }
 
@@ -115,7 +117,9 @@ public class ActivateVnfDBHelperTest extends BaseTest {
         // prepare updated expected object
         OperationalEnvServiceModelStatus expectedUpdatedServiceModelStatus = serviceModelStatus1;
         expectedUpdatedServiceModelStatus.setServiceModelVersionDistrStatus(statusError);
-        expectedUpdatedServiceModelStatus.setRetryCount(new Integer(retryCountZero));
+        Integer integer = Integer.valueOf(retryCountZero);
+        expectedUpdatedServiceModelStatus.setRetryCount(integer);
+        // expectedUpdatedServiceModelStatus.setRetryCount(new Integer(retryCountZero));
 
         // test update method - update statusOk to statusError & retryCountThree to retryCountZero
         OperationalEnvServiceModelStatus serviceModelStatus2 =
